k8s/03-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: techshop-loadbalancer
  namespace: techshop
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
